fixing the white space next to the chat input line

--- a/client/themes/example.css
+++ b/client/themes/example.css
@@ -14,7 +14,7 @@ visibility: hidden;
 visibility: hidden;
 }
 
-#nick {
+#nickname {
 visibility: hidden;
 }
 
